--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <button onclick="convertToBase64()">Convert</button>
     <div id="base64Output"></div>
     <p>function displayImageFromBase64(base64String) { <br>
-  // Create balise img
+  // Create balise img <br>
   const imgElement = document.createElement("img"); <br>
-  // Assign Base64 string to image source
+  // Assign Base64 string to image source <br>
   imgElement.src = base64String; <br>
-  // Do whatever you want with the image, for example, add it to the DOM
+  // Do whatever you want with the image, for example, add it to the DOM <br>
   document.body.appendChild(imgElement); <br>
 }</p>
     <script>
